# ooview

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp  mock_usb4000.cpp  mock_usb4000.h  ooview.cpp  ooview.h  ooview_controller.cpp  ooview_controller.h  spectrometer.cpp  spectrometer.h
ui/: ooview.ui
